@@ -4,6 +4,7 @@ Version: 1.1.25
     - Fixed Mining Drones dying to Blue Tiberium
   Changes:
     - Improved balance when used with Space Exploration
+    - Tiberium Seed Rockets can no longer spawn Tiberium Blossom Trees close together
   Features:
     - Added Tiberium Detonation Charge for destroying Tiberium Blossom Trees
     - Added settings for customizing the growth rate of Blue Tiberium
